--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+  <!--<link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
+-->
 </head>
 <body>
   <app-root></app-root>
